updated package.json name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-js-app-starter",
+  "name": "generator-es6-starter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
