--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "<%= appName %>",
+  "name": "uglydick",
   "version": "0.0.0",
-  "description": "<%= appDescription %>",
+  "description": "uglydick",
   "main": "src/index.js",
   "scripts": {
     "start": "webpack-dev-server --inline --hot",
@@ -36,6 +36,7 @@
     "eslint-plugin-prettier": "^2.1.1",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.28.0",
     "husky": "^0.13.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^20.0.4",
@@ -47,8 +48,7 @@
     "style-loader": "^0.18.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.2.0-rc.0",
-    "html-webpack-plugin": "^2.28.0"
+    "webpack-dev-server": "^2.2.0-rc.0"
   },
   "dependencies": {
     "lodash": "^4.17.4"
